# file-deduplication

./: vcpkg.json
sp-dedup/: CMakeLists.txt  gui_frontend.py
sp-dedup/include/: docx_dedup.h  docx_dedupe.h  file_ops.h  hasher.h  xlsx_dedup.h  xlsx_dedupe.h  zip_util.h
sp-dedup/src/: docx_dedup.cpp  docx_dedupe.cpp  file_ops.cpp  hasher_win.cpp  main.cpp  xlsx_dedup.cpp  xlsx_dedupe.cpp  zip_util.cpp
